--- a/sandboxIncludes/css/viewSandbox.css
+++ b/sandboxIncludes/css/viewSandbox.css
@@ -13,3 +13,28 @@
   width: 300px;
   height: 100px;
 }
+
+iframe {
+  width: 100%;
+}
+
+#iframeContainer {
+  margin-top: 10px;
+  border: 1px solid #ddd;
+  position: relative;
+}
+
+/**
+ * Frameboyant removes the body background property of any iframe it controls. This pseudo element
+ * has the same dimmensions as the iframe and we can set a background color on it.
+*/
+#iframeContainer:after {
+  background: #fafafa;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  top: 0;
+  position: absolute;
+}
