--- a/sandboxIncludes/css/sandbox.css
+++ b/sandboxIncludes/css/sandbox.css
@@ -1,5 +1,11 @@
+html, body {
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
-  padding: 12px;
+  padding: 12px 12px 0 12px;
+  box-sizing: border-box;
 }
 
 .nav {
@@ -8,30 +14,10 @@ body {
   right: 0;
 }
 
-.actionPanel {
-  float: left;
-  padding: 12px;
-}
-
-.actionPanel:first-child {
-  padding-left: 0;
-}
-
-.actionPanel:last-child {
-  padding-right: 0;
-}
-
-.actionPanel:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 .CodeMirror {
-  display: block;
-  width: 550px;
-  height: 350px;
-  margin-top: 8px;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
 
 iframe {
@@ -70,4 +56,45 @@ iframe {
 
 #validateOutput {
   font-size: 24px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.inputs {
+  flex-grow: 1;
+  display: flex;
+}
+
+.actionPanel {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 12px 12px 0;
+}
+
+.actionPanel > div {
+  position: relative;
+}
+
+#validatePanel {
+  padding-right: 0;
+  flex-grow: 0;
+}
+
+#initPanel {
+  padding-left: 0;
+  max-height: 100%;
+}
+
+#initEditorContainer, #getSettingsEditorContainer {
+  flex-grow: 1;
+  margin: 12px 0;
+  max-height: 100%;
+  overflow: hidden;
+  min-width: 550px;
+  min-height: 350px;
 }
