--- a/src/client/sandbox.css
+++ b/src/client/sandbox.css
@@ -1,10 +1,4 @@
-html, body {
-  height: 100%;
-  min-height: 100%;
-}
-
-body {
-  padding: 12px 12px 0 12px;
+* {
   box-sizing: border-box;
 }
 
@@ -22,32 +16,15 @@ body {
 
 iframe {
   width: 100%;
+  border: 0;
 }
 
-#iframeContainer {
+#extensionViewContainer {
+  position: relative;
+  z-index: 10; /* keep it above the edit mode backdrop */
   margin-top: 10px;
   border: 1px solid #ddd;
-  position: relative;
-}
-
-/**
- * Frameboyant removes the body background property of any iframe it controls. This pseudo element
- * has the same dimensions as the iframe and we can set a background color on it.
-*/
-#iframeContainer:after {
   background: #fafafa;
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  z-index: -2;
-  top: 0;
-  position: absolute;
-}
-
-#iframeContainer.loading {
-  height: 0px;
-  overflow: hidden;
 }
 
 .error {
@@ -62,6 +39,7 @@ iframe {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  padding: 12px 12px 0 12px;
 }
 
 .inputs {
@@ -85,7 +63,6 @@ iframe {
 #validatePanel {
   padding-right: 0;
   flex-grow: 0;
-  max-width: 110px;
 }
 
 #initPanel {
@@ -100,4 +77,18 @@ iframe {
   overflow: hidden;
   min-width: 250px;
   min-height: 350px;
+}
+
+#editModeBackdrop {
+  display: none;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, .4);
+}
+
+body.editMode #editModeBackdrop {
+  display: block;
 }
