Fix document.registerElement Chrome warning.

--- a/src/client/viewSandbox.css
+++ b/src/client/viewSandbox.css
@@ -81,7 +81,7 @@ iframe {
   left: 0;
 }
 
-coral-panel-content {
+.coral-PanelContent {
   display: flex;
   flex-direction: column;
   height: 100%;
