--- a/src/app/viewSandbox/ViewSandbox.css
+++ b/src/app/viewSandbox/ViewSandbox.css
@@ -9,7 +9,7 @@ iframe {
 }
 
 #controlPane div[role='tabpanel'] {
-  height: 100%;
+  height: calc(100% - 6.5rem);
 }
 
 #controlPane .codeMirror-Wrapper {
@@ -17,5 +17,5 @@ iframe {
 }
 
 #controlPane .CodeMirror {
-  height: calc(100% - 7.2em);
+  height: 100%;
 }
