--- a/src/app/index.css
+++ b/src/app/index.css
@@ -42,3 +42,23 @@ button {
 .gutter.gutter-horizontal {
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
 }
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+#controlPane div[role='tabpanel'] {
+  height: calc(100% - 6.5rem);
+}
+
+/* Hack for making the tab headers not grow */
+#controlPane > div:first-child > div:first-child {
+  flex-grow: unset;
+  flex-basis: unset;
+}
+
+#controlPane .codeMirror-Wrapper {
+  height: 100%;
+}
