--- a/src/app/index.css
+++ b/src/app/index.css
@@ -42,3 +42,13 @@ button {
 .gutter.gutter-horizontal {
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
 }
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+#controlPane .codeMirror-Wrapper {
+  height: 100%;
+}
